--- a/groups/api-facade-all/pom.xml
+++ b/groups/api-facade-all/pom.xml
@@ -106,7 +106,7 @@
 	</dependencies>
 
 	<properties>
-		<license.header.location>../../../licensing-header.txt</license.header.location>
+		<license.header.location>../../licensing-header.txt</license.header.location>
 	</properties>
 
 </project>
