--- a/groups/api-javascript-all/pom.xml
+++ b/groups/api-javascript-all/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <license.header.location>../../../licensing-header.txt</license.header.location>
+        <license.header.location>../../licensing-header.txt</license.header.location>
     </properties>
 
     <dependencies>
