--- a/groups/cms-all/pom.xml
+++ b/groups/cms-all/pom.xml
@@ -100,7 +100,7 @@
     </dependencies>
 
     <properties>
-        <license.header.location>../../../licensing-header.txt</license.header.location>
+        <license.header.location>../../licensing-header.txt</license.header.location>
     </properties>
 
 </project>
