--- a/groups/database-all/pom.xml
+++ b/groups/database-all/pom.xml
@@ -93,7 +93,7 @@
     </dependencies>
 
     <properties>
-        <license.header.location>../../../licensing-header.txt</license.header.location>
+        <license.header.location>../../licensing-header.txt</license.header.location>
     </properties>
 
 </project>
