--- a/groups/odata-all/pom.xml
+++ b/groups/odata-all/pom.xml
@@ -44,7 +44,7 @@
     </dependencies>
 
 	<properties>
-		<license.header.location>../../../licensing-header.txt</license.header.location>
+		<license.header.location>../../licensing-header.txt</license.header.location>
 	</properties>
 
 </project>
