--- a/groups/repository-all/pom.xml
+++ b/groups/repository-all/pom.xml
@@ -72,7 +72,7 @@
     </dependencies>
 
     <properties>
-        <license.header.location>../../../licensing-header.txt</license.header.location>
+        <license.header.location>../../licensing-header.txt</license.header.location>
     </properties>
 
 </project>
