--- a/groups/service-all/pom.xml
+++ b/groups/service-all/pom.xml
@@ -79,7 +79,7 @@
     </dependencies>
 
     <properties>
-        <license.header.location>../../../licensing-header.txt</license.header.location>
+        <license.header.location>../../licensing-header.txt</license.header.location>
     </properties>
 
 </project>
