--- a/groups/templating-all/pom.xml
+++ b/groups/templating-all/pom.xml
@@ -64,7 +64,7 @@
     </dependencies>
 
     <properties>
-        <license.header.location>../../../licensing-header.txt</license.header.location>
+        <license.header.location>../../licensing-header.txt</license.header.location>
     </properties>
 
 </project>
