[API] Log - POM Dependency Version Fix

--- a/api/api-facade/api-log/pom.xml
+++ b/api/api-facade/api-log/pom.xml
@@ -53,13 +53,13 @@
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-persistence</artifactId>
-            <version>5.12.10</version>
+            <version>7.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-api-facade-security</artifactId>
-			<version>5.12.10</version>
+			<version>7.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
