--- a/api/api-facade/api-database/pom.xml
+++ b/api/api-facade/api-database/pom.xml
@@ -52,7 +52,13 @@
 			<artifactId>dirigible-database-dynamic</artifactId>
 			<version>7.0.0-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-security</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<properties>
 		<license.header.location>../../../licensing-header.txt</license.header.location>
