--- a/releng/spring-boot/pom.xml
+++ b/releng/spring-boot/pom.xml
@@ -68,7 +68,8 @@
 			<version>7.0.0-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-repository-master</artifactId> 
-			<version>6.0.0-SNAPSHOT</version> </dependency> -->
+			<version>7.0.0-SNAPSHOT</version>
+			</dependency> -->
 
 		<!-- Database -->
 		<dependency>
@@ -125,15 +126,19 @@
 		</dependency>
 
 		<!-- CMS -->
-		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-cms</artifactId> 
-			<version>5.12.7</version> <exclusions> <exclusion> <groupId>org.eclipse.dirigible</groupId> 
+		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> 
+		<artifactId>dirigible-cms</artifactId> 
+			<version>7.0.0-SNAPSHOT</version>
+			<exclusions> <exclusion>
+			 <groupId>org.eclipse.dirigible</groupId> 
 			<artifactId>dirigible-cms-managed</artifactId> </exclusion> <exclusion> <groupId>org.eclipse.dirigible</groupId> 
 			<artifactId>dirigible-cms-database</artifactId> </exclusion> </exclusions> 
 			</dependency> -->
 
 		<!-- BPM -->
 		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-bpm</artifactId> 
-			<version>6.0.0-SNAPSHOT</version> </dependency> -->
+			<version>7.0.0-SNAPSHOT</version>
+ </dependency> -->
 
 		<!-- IDE Plugins -->
 		<dependency>
@@ -165,7 +170,7 @@
 
 		<!-- External API modules -->
 		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-ext</artifactId> 
-			<version>6.0.0-SNAPSHOT</version> </dependency> -->
+			<version>7.0.0-SNAPSHOT</version> </dependency> -->
 
 		<!-- External -->
 		<dependency>
