Fixed: #1386 - CLI package for test purposes

--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -36,6 +36,7 @@
 		<module>trial-all</module>
 		<module>server-minimal</module>
 		<module>server-spring-boot</module>
+		<module>server-picocli</module>
 	</modules>
 
 	<properties>
