Fixed: #1387 - Eclipse Vert.x package to be provided

--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -37,6 +37,7 @@
 		<module>server-minimal</module>
 		<module>server-spring-boot</module>
 		<module>server-picocli</module>
+		<module>server-vertx</module>
 	</modules>
 
 	<properties>
