--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,9 @@
 		
 	Tests coverage report generation
 		mvn clean -B package -P coverage
+		
+	Static checks analysis
+		mvn clean install -P spotbugs
 
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -303,12 +306,13 @@
 		</profile>
 
 		<profile>
-			<id>findbugs</id>
+			<id>spotbugs</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<build>
 				<plugins>
+				
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
@@ -320,59 +324,23 @@
 							<debuglevel>lines,vars,source</debuglevel>
 						</configuration>
 					</plugin>
+					
 					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>findbugs-maven-plugin</artifactId>
-						<version>3.0.3</version>
-						<configuration>
-							<findbugsXmlOutput>true</findbugsXmlOutput>
-							<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-							<xmlOutput>true</xmlOutput>
-							<failOnError>false</failOnError>
-							<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
-						</configuration>
-						<executions>
-							<execution>
-								<id>analyze-compile</id>
-								<phase>compile</phase>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
+					  <groupId>com.github.spotbugs</groupId>
+					  <artifactId>spotbugs-maven-plugin</artifactId>
+					  <version>4.5.2.0</version>
+					  <dependencies>
+					    <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+					    <dependency>
+					      <groupId>com.github.spotbugs</groupId>
+					      <artifactId>spotbugs</artifactId>
+					      <version>4.5.3</version>
+					    </dependency>
+					  </dependencies>
 					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-pmd-plugin</artifactId>
-						<configuration>
-							<sourceEncoding>utf-8</sourceEncoding>
-							<minimumTokens>100</minimumTokens>
-							<targetJdk>${java.version}</targetJdk>
-							<format>xml</format>
-							<failOnViolation>false</failOnViolation>
-						</configuration>
-					</plugin>
+					
 				</plugins>
 
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>emma-maven-plugin</artifactId>
-							<version>1.0-alpha-3</version>
-							<configuration>
-								<filters>
-									<filter>-org.eclipse.dirigible.*</filter>
-								</filters>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-pmd-plugin</artifactId>
-							<version>2.5</version>
-						</plugin>
-					</plugins>
-				</pluginManagement>
 			</build>
 		</profile>
 		
