Extract git api from utils

--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -33,6 +33,7 @@
         <module>api-bpm</module>
         <module>api-cms</module>
         <module>api-documents</module>
+        <module>api-git</module>
     </modules>
 
     <properties>
