--- a/modules/database/database-changelog/pom.xml
+++ b/modules/database/database-changelog/pom.xml
@@ -85,7 +85,7 @@
     	<dependency>
 		    <groupId>org.liquibase</groupId>
 		    <artifactId>liquibase-core</artifactId>
-		    <version>4.4.2</version>
+		    <version>${liquibase-core.version}</version>
 		</dependency>
     	
     	<dependency>
