--- a/pom.xml
+++ b/pom.xml
@@ -692,7 +692,7 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<slf4j.simple.version>1.7.12</slf4j.simple.version>
 		<logback.version>1.2.10</logback.version>
-		<h2database.version>1.4.200</h2database.version>
+		<h2database.version>2.0.206</h2database.version>
 		<derby.version>10.12.1.1</derby.version>
 		<activemq.version>5.16.0</activemq.version>
 		<jsr250-api.version>1.0</jsr250-api.version>
@@ -711,6 +711,7 @@
 		<git-commit-id-plugin.version>4.0.2</git-commit-id-plugin.version>
 		<mongodb.version>3.12.7</mongodb.version>
 		<caffeine.version>3.0.3</caffeine.version>
+		<liquibase-core.version>4.6.2</liquibase-core.version>
 		<exec.maven.plugin>3.0.0</exec.maven.plugin>
 
 		<profile.content.phase>none</profile.content.phase>
