--- a/modules/database/database-api/pom.xml
+++ b/modules/database/database-api/pom.xml
@@ -46,6 +46,12 @@
 			<artifactId>dirigible-database-sql</artifactId>
 			<version>7.0.0-SNAPSHOT</version>
     	</dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-security</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<properties>
