--- a/pom.xml
+++ b/pom.xml
@@ -717,7 +717,7 @@
 		<profile.content.phase>none</profile.content.phase>
 
 		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
-		<content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
+		<content.scm.connection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
 		<content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}</content.scm.developerConnection>
 		<content.repository.branch>master</content.repository.branch>
 
